[tool.poetry]
name = "antorchita"
version = "0.1.0"
description = "A tiny autograd implementation with a torch-like API"
authors = ["Santiago <shpotes3@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.2"
jupyterlab = "^2.2.9"

[tool.poetry.dev-dependencies]
torch = "^1.7.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
